--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
     "http": "0.0.0",
     "nodemon": "^1.18.10",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "body-parser":"^1.19.0",
+    "express-session":"^1.16.2"
   }
 }
